add tests to profile screen viewmodel and mapper